--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -1,9 +1,5 @@
-* {
-    box-sizing: border-box;
-    padding: 0;
-    margin: 0;
-}
+@import "./main/reset.scss";
+@import "./main/common.scss";
+@import "./components/header.scss";
 
-html {
-    background-color: bisque;
-}
+body {}
