--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -5,8 +5,9 @@ html(lang="en")
         meta(http-equiv="X-UA-Compatible", content="IE=edge")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         title website
+        link(rel="stylesheet", href="./assets/css/vendor.min.css")
         link(rel="stylesheet", href="./assets/css/app.css")
     body
-        // h1 Title h1
-        //- p Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente aspernatur ipsam rerum autem deleniti eius voluptas quasi ut maiores, perferendis odit beatae, id, architecto labore vitae laborum quas illum. Accusantium.
-        img(src="./assets/imgs/cat.jpeg", alt="картинка кота")
+        include ./components/header.pug
+        script(src="./assets/js/vendors.min.js")
+        script(src="./assets/js/app.js")
