--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -5,7 +5,7 @@ html(lang="en")
         meta(http-equiv="X-UA-Compatible", content="IE=edge")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         title website
-        link(rel="stylesheet", href="./assets/css/vendor.min.css")
+        link(rel="stylesheet", href="./assets/css/vendors.min.css")
         link(rel="stylesheet", href="./assets/css/app.css")
     body
         include ./components/header.pug
